@@ -1,4 +1,5 @@
 30 Jul 2018
+add: button to ignore query on database update
 update: allow staff site access when site set offline
 remove: bad banner
 fix: get lang before use of lang
